# Pandas-Cookbook-Second-Edition

./: main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
Chapter01/: c1-code.ipynb
Chapter02/: c2-code.ipynb
Chapter03/: c3-code.ipynb  utils.py
Chapter04/: c4-code.ipynb
Chapter05/: c5-code.ipynb
Chapter06/: c6-code.ipynb
Chapter07/: c7-code.ipynb
Chapter08/: c8-code.ipynb
Chapter09/: c9-code.ipynb
Chapter10/: c10-code.ipynb
Chapter11/: 11-code.ipynb
Chapter12/: 12-code.ipynb
Chapter13/: 13-code.ipynb
Chapter14/: 14-code.ipynb
data/: yfinance_TSLA_20170101.csv
kag-demo-hypo/: kag.py
kag-demo-hypo/test/: conftest.py  test_hypot.py  test_kag.py
kag-demo-pytest/test/: test_kag.py
