[project]
name = "pandas-cookbook-second-edition"
version = "0.1.0"
description = "Cloned from https://github.com/PacktPublishing/Pandas-Cookbook-Second-Edition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "notebook>=7.5.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "pyarrow>=22.0.0",
    "requests-cache>=1.2.1",
    "ruff>=0.14.7",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
